--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@docusaurus/core": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
     "@mdx-js/react": "^1.6.22",
+    "axios": "^1.1.3",
     "clsx": "^1.2.1",
+    "html-react-parser": "^3.0.4",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
