--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@docusaurus/preset-classic": "2.1.0",
     "@mdx-js/react": "^1.6.22",
     "axios": "^1.1.3",
+    "chart.js": "^4.0.1",
     "clsx": "^1.2.1",
     "html-react-parser": "^3.0.4",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
