--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -2,22 +2,22 @@ nathaniel:
   name: Nathaniel
   title: Utviklingsansvarlig
   url: https://www.linkedin.com/in/nathaniel-stensen-5658aa257/
-  image_url: https://media-exp1.licdn.com/dms/image/D4E03AQGjUdjUKj23BQ/profile-displayphoto-shrink_800_800/0/1668861757802?e=1674691200&v=beta&t=f-YnbZQNLpDC-GLuJByVhoXXoXDUW3jaLioKsj0guic
+  image_url: https://media.licdn.com/dms/image/D4E03AQGjUdjUKj23BQ/profile-displayphoto-shrink_800_800/0/1668861757802?e=1684368000&v=beta&t=54GtyGtYUWYfycvbMlNJzJ0HJrQ7vd39SyCzSkBod0k
 
 oscar:
   name: Oscar Brettville
   title: Porteføljeansvarlig
   url: https://www.linkedin.com/in/oscar-bretteville-2384941a1/
-  image_url: https://media-exp1.licdn.com/dms/image/C4D03AQFJQODM17V1dg/profile-displayphoto-shrink_800_800/0/1658767173413?e=1674691200&v=beta&t=9TuYTaCJ4x4s4D6loWL0jLpSxnnHyuf_RuJ8VgvUFYY
+  image_url: https://media.licdn.com/dms/image/C4D03AQFJQODM17V1dg/profile-displayphoto-shrink_800_800/0/1658767173413?e=1684368000&v=beta&t=z-G16RFrSvEfn7IdHp61tWi09fvh7L6gKMBQ9kfEfIE
 
 edvard:
   name: Edvard Mysen
   title: Leder
   url: https://www.linkedin.com/in/edvard-sander-bae-mysen-873a661bb/
-  image_url: https://media-exp1.licdn.com/dms/image/C4D03AQE0Hu4qnr8vWw/profile-displayphoto-shrink_800_800/0/1663233790967?e=1674691200&v=beta&t=hPq_Egs479v9uZcjf3zlnJ7wLWQx-BPqUm23dSt22r4
+  image_url: https://media.licdn.com/dms/image/C4D03AQE0Hu4qnr8vWw/profile-displayphoto-shrink_400_400/0/1663233790967?e=1684368000&v=beta&t=xur5u5n4EWE8gv5cXCaAMBpE9_594w-loygRRG-19UY
 
 mirella:
   name: Mirella Brodschöll
   title: Sekretær
   url: https://www.linkedin.com/in/mirella-brodsch%C3%B6ll-bb3316258/
-  image_url: https://tise-static.telenorcdn.net/profile-pictures/582f81e66119bf000f04159d/a662b0aa-57a3-47dd-8a2a-7687c785daa2
+  image_url: https://media.licdn.com/dms/image/D4E03AQG7S4ezVm6A6Q/profile-displayphoto-shrink_400_400/0/1669587331393?e=1684368000&v=beta&t=_x9Rj6ZGwlBd59_5FZIzqmKP8YvJLNXqHzPeQO2OxSI
