--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -5,7 +5,7 @@ nathaniel:
   image_url: https://media.licdn.com/dms/image/D4E03AQGjUdjUKj23BQ/profile-displayphoto-shrink_800_800/0/1668861757802?e=1684368000&v=beta&t=54GtyGtYUWYfycvbMlNJzJ0HJrQ7vd39SyCzSkBod0k
 
 oscar:
-  name: Oscar Brettville
+  name: Oscar Bretteville
   title: Porteføljeansvarlig
   url: https://www.linkedin.com/in/oscar-bretteville-2384941a1/
   image_url: https://media.licdn.com/dms/image/C4D03AQFJQODM17V1dg/profile-displayphoto-shrink_800_800/0/1658767173413?e=1684368000&v=beta&t=z-G16RFrSvEfn7IdHp61tWi09fvh7L6gKMBQ9kfEfIE
