--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,12 +1,12 @@
 nathaniel:
   name: Nathaniel
-  title: Utviklingsansvarlig
+  title: Leder for algoritme-og webutvikling
   url: https://www.linkedin.com/in/nathaniel-stensen-5658aa257/
   image_url: https://media.licdn.com/dms/image/D4E03AQGjUdjUKj23BQ/profile-displayphoto-shrink_800_800/0/1668861757802?e=1684368000&v=beta&t=54GtyGtYUWYfycvbMlNJzJ0HJrQ7vd39SyCzSkBod0k
 
 oscar:
   name: Oscar Bretteville
-  title: Porteføljeansvarlig
+  title: Leder for porteføljeforvaltning
   url: https://www.linkedin.com/in/oscar-bretteville-2384941a1/
   image_url: https://media.licdn.com/dms/image/C4D03AQFJQODM17V1dg/profile-displayphoto-shrink_800_800/0/1658767173413?e=1684368000&v=beta&t=z-G16RFrSvEfn7IdHp61tWi09fvh7L6gKMBQ9kfEfIE
 
