--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -2,22 +2,22 @@ nathaniel:
   name: Nathaniel
   title: Leder for algoritme-og webutvikling
   url: https://www.linkedin.com/in/nathaniel-stensen-5658aa257/
-  image_url: https://media.licdn.com/dms/image/D4E03AQGjUdjUKj23BQ/profile-displayphoto-shrink_800_800/0/1668861757802?e=1684368000&v=beta&t=54GtyGtYUWYfycvbMlNJzJ0HJrQ7vd39SyCzSkBod0k
+  image_url: /img/Nathaniel.jpeg
 
 oscar:
   name: Oscar Bretteville
   title: Leder for porteføljeforvaltning
   url: https://www.linkedin.com/in/oscar-bretteville-2384941a1/
-  image_url: https://media.licdn.com/dms/image/C4D03AQFJQODM17V1dg/profile-displayphoto-shrink_800_800/0/1658767173413?e=1684368000&v=beta&t=z-G16RFrSvEfn7IdHp61tWi09fvh7L6gKMBQ9kfEfIE
+  image_url: /img/Oscar.jpeg
 
 edvard:
   name: Edvard Mysen
   title: Leder
   url: https://www.linkedin.com/in/edvard-sander-bae-mysen-873a661bb/
-  image_url: https://media.licdn.com/dms/image/C4D03AQE0Hu4qnr8vWw/profile-displayphoto-shrink_400_400/0/1663233790967?e=1684368000&v=beta&t=xur5u5n4EWE8gv5cXCaAMBpE9_594w-loygRRG-19UY
+  image_url: /img/Edvard.jpeg
 
 mirella:
   name: Mirella Brodschöll
   title: Sekretær
   url: https://www.linkedin.com/in/mirella-brodsch%C3%B6ll-bb3316258/
-  image_url: https://media.licdn.com/dms/image/D4E03AQG7S4ezVm6A6Q/profile-displayphoto-shrink_400_400/0/1669587331393?e=1684368000&v=beta&t=_x9Rj6ZGwlBd59_5FZIzqmKP8YvJLNXqHzPeQO2OxSI
+  image_url: /img/Mirella.jpeg
