--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "dependencies": {
     "@docusaurus/core": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mdx-js/react": "^1.6.22",
     "axios": "^1.1.3",
     "chart.js": "^2.9.4",
@@ -24,6 +28,7 @@
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.11.1",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
